Finalize remotestartupscript.sh
Based on discussions with Matthew Webber as to how the application 
install and startup arrangements will be set out, modify the 
remote startup script accordingly.

Change-Id: I268d3c7a27e4e429b35b1b9c6c1d68eba97c2a33